tests/fixtures/invalid/max_bool_dict.py
# Cannot call max() with Bool, Dict[str, int]
x = max(True, {"a": 1})
